# siLiang

./: .dockerignore  .env.example  .env.production  .env.test.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  README_API.md  aerich.ini  docker-compose.server.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-frontend.yml  deploy.yml  test.yml
.opencode/: TODO.md
.opencode/repowiki/: 01-project-overview.md  02-architecture.md  03-directory-structure.md  04-tech-stack.md  05-dev-setup.md  06-core-modules.md  07-api-reference.md  08-data-flow.md  09-configuration.md  10-testing.md  11-coding-conventions.md  12-error-handling.md  13-authentication.md  14-database.md  15-deployment.md  index.md  wiki-state.json
TOPICSYSTEM_Web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
TOPICSYSTEM_Web/src/: main.js  style.css
docs/wiki/: 01-project-overview.md  02-architecture.md  03-directory-structure.md  16-frontend-backend-contract.md  index.md  wiki-state.json
migrations/models/: 0_20260613001751_init.py
resource/: schema.json
scripts/: backfill_relations.py  batch_generate.py  build_embedding_mean.py  dedup_analyzer.py  deploy.sh  entrypoint.sh  expand_topics.py  generate_java_fullstack.py  init_db_roles.sql  init_menu.py  iterative_coverage.py  knowledge_map.json  long_run_gen.py  model_generator.py  seed_topics.json  seed_topics_1000.json
scripts/manual_tests/: README.md  api_test.py  full_pipeline_test.py  profile_upsert.py  profile_upsert2.py  single_topic_test.py
skill/generateByTopic/: skill.md  skill_v2.md
skill/languageConverter/: skill.md
src/: main.py
src/agent/: graph.py  state.py
src/agentv3/: capability.py  circuit_breaker.py  executor.py  master.py  permissions.py  prompt_builder.py  protocols.py  registry.py  session.py  slave.py  slave_registry.py  token_budget.py
src/api/: __init__.py  cache.py  healthcheck.py  interview_api.py  menu_api.py  topic_api.py  topic_api_v2.py  topic_api_v3.py
src/auth/: api.py  deps.py  hash.py  jwt.py
src/common/: __init__.py  rabbitmq.py  semantic_error.py
src/config/: __init__.py  aerich_config.py  database.db.py  database.py  llm_config.py  rabbitmq_config.py  settings.py
src/core/: config.py
src/middleware/: __init__.py  auth.py  quota.py
src/models/: __init__.py  captcha.py  fields.py  interview_persona.py  interview_room.py  interview_round.py  interview_summary.py  job_position.py  knowledge_alias.py  knowledge_dict.py  mastery_attempt.py  menu.py  outbox.py  prompt_call_log.py  prompt_template.py  topic.py  topic_advanced_question.py  topic_core_concept.py  topic_derivative.py  topic_evaluation_anchor.py  topic_extension.py  topic_prerequisite.py  topic_reference.py  topic_review_log.py  topic_similar_question.py  user.py  user_level.py  user_profile.py  (+3 more)
templates/: model.py.j2
testPluin/: test_api.py
test_output/: gen_skill_v2_result.json  topology_v2_result.json
tests/: conftest.py  factories.py  test_agentv3.py  test_api_with_json.py  test_auth_api.py  test_auth_middleware.py  test_cache.py  test_db_write.py  test_dedup.py  test_infra.py  test_interview.py  test_interview_api.py  test_json_truncation.py  test_knowledge_dedup.py  test_mastery.py  test_model_crud.py  test_quota.py  test_topic_api_flow.py  test_topic_crud.py  test_topic_save.py  test_user_crud.py  test_user_level_crud.py
(+100 files in other folders)
