[tool.poetry]
name = "topicsystem"
version = "0.2.0"
description = "AI-Powered Interview Question Generation System with Agent Loop"
authors = ["xunsu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = ">=0.43.0"
tortoise-orm = ">=0.24.0"
aerich = ">=0.7.0"
pydantic = ">=2.0"
pydantic-settings = ">=2.13.0"
python-dotenv = ">=1.2.0"

# Agent Framework
langgraph = ">=0.2.0"
langchain = ">=0.3.0"
langchain-openai = ">=0.3.0"
langchain-community = ">=0.3.0"

# Vector Database
pymilvus = ">=2.4.0"

# Embedding
sentence-transformers = ">=3.0.0"

# Async & Messaging
aio-pika = ">=9.4.0"

# Tracing
opentelemetry-api = ">=1.20"
opentelemetry-sdk = ">=1.20"
opentelemetry-exporter-otlp = ">=1.20"
langfuse = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
httpx = ">=0.27"
ruff = ">=0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
